[project]
name = "audioldm-train"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "ruamel.yaml>=0.18.5,<0.19.0",
    "wget>=3.2,<4.0.0",
    "kornia>=0.7.0,<0.8.0",
    "braceexpand>=0.1.7,<0.2.0",
    "webdataset>=0.2.75,<0.3.0",
    "wandb>=0.16.0,<0.17.0",
    "pytorch-lightning>=2.1.1,<2.2.0",
    "einops>=0.7.0,<0.8.0",
    "h5py>=3.10.0,<3.11.0",
    "transformers==4.30.2",
    "ftfy>=6.1.1,<7.0.0",
    "pandas>=2.1.3,<2.2.0",
    "matplotlib>=3.8.1,<3.9.0",
    "taming-transformers-rom1504>=0.0.6,<0.0.7",
    "ipdb>=0.13.13,<0.14.0",
    "scipy>=1.14.1",
    "librosa==0.9.2",
    "torchlibrosa>=0.0.9,<0.1.0",
    "timm>=1.0.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["audioldm_train"]

# src レイアウトを使用する場合は以下を追加
# packages-dir = {"" = "src"}